dropdown is now tagged properly

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -1,14 +1,6 @@
-{% extends "my-layout.html" %}
-  
-{% block sidebar_content %}
-{% endblock %}
-
-{% block heading %}Engineering Success{% endblock %}
-
-{% block page_content %}
 <div class="content">
     <div class="m-2 mb-16">
-        <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</P>
+        <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</p>
         <p class="MAIN-STUFF"><u>Overview: </u></p>
         <p class="sub-stuff">The first module of our DBTL cycle shows how our initial project idea shifted on the basis of iHP and testing. </p>
         <p class="MAIN-STUFF"><u>Design: </u></p>
@@ -27,13 +19,13 @@
           We predicted the structure of the TccA amidase as well as the binding sites. Since most of our data was not obtained via experimentation, our Human practices team reached out to many experts, including Mr. Omkar Khade and Dr. Gurunath Ramanathan, to learn more about the feasibility of our project idea.
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading1">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
+                  aria-expanded="true" aria-controls="collapse1">
                   <u>Catalytic Triad</u>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading1">
                 <div class="accordion-body">
                   <p class="sub-stuff">
                     Through literature survey, we found the catalytic triad of the amidase family to be Ser-Ser-Lys. To identify exactly which triad (Ser-Ser-Lys) of the amidase family was involved, we used multiple alignments.
@@ -48,13 +40,13 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading2">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2"
+                  aria-expanded="true" aria-controls="collapse2">
                   <b>Alphafold</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading2">
                 <div class="accordion-body">
                   <!--Fig 1-->
                   <p class="sub-stuff" style="text-align:center;">
@@ -127,13 +119,13 @@
           </p>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading3">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3"
+                  aria-expanded="true" aria-controls="collapse3">
                   <b>Effect of Acetonitrile</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading3">
                 <div class="accordion-body">
                   <p class="sub-stuff">
                     <b><i>Pseudomonas putida</i></b>
@@ -165,15 +157,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading4">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4"
+                  aria-expanded="true" aria-controls="collapse4">
                   <b>Effect of pH</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading4">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at different pH values
                       <!--(insert image of p putida ph)-->
@@ -200,15 +192,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading5">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5"
+                  aria-expanded="true" aria-controls="collapse5">
                   <b>Effect of Temperature</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading5">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at 24° C and 37° C
                       <!--(insert image of p putida Temp)-->
@@ -237,15 +229,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading6">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6"
+                  aria-expanded="true" aria-controls="collapse6">
                   <b>Effect of TCC in Sludge Level Concentrations</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading6">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at different concentrations of TCC (sludge concentration)
                       <!--((insert image of p putida tcc sludge)-->
@@ -274,15 +266,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading7">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7"
+                  aria-expanded="true" aria-controls="collapse7">
                   <b><i>Pseudomonas putida:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading7">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7">
                     <li>It has a lag phase of roughly 4 hours, after which its growth plateaus become steady. </li>
                     <li>We found that it showed optimal growth at 30ºC and 7.5pH</li>
                     <li>Its growth is stunted under the presence of TCC. </li>
@@ -300,15 +292,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading8">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8"
+                  aria-expanded="true" aria-controls="collapse8">
                   <b><i>Pseudomonas fluorescens:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading8">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8">
                     <li>shows good growth at 30ºC, 7.5 pH.</li>
                     <li>Growth is stunted under the presence of TCC. </li>
                   </ul>
@@ -323,15 +315,15 @@
 
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h4 class="accordion-header" id="headingOne">
-                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+              <h4 class="accordion-header" id="heading9">
+                <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9"
+                  aria-expanded="true" aria-controls="collapse9">
                   <b><i>Acinetobacter baylyi:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading9">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9">
                     <li>It has a lag phase of 8-9 hours using primary inoculum</li>
                     <li>The lag phase for the secondary inoculation was about 2-3 hours. We tested its growth by altering the temperature, pH, and TCC concentration. </li>
                     <li>We found that 30ºC, 7.5 pH were the ideal conditions for growth and surprisingly, the presence of such high concentrations of TCC did not impede its exponential growth. Hence, <i>A. baylyi</i> can proliferate and grow uninhibited in the presence of TCC.</li>
@@ -345,8 +337,9 @@
             </div>
           </div>
 
-          <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</P>
+          <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</p>
 
+          <p class="MAIN-STUFF"><u>Design:</u></p>
 
 
 
@@ -375,10 +368,3 @@
 
     </div>
 </div>
-
-
-
-
-    </div>
-</div>
-{% endblock %}
