--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -93,7 +93,7 @@
 <div class="content">
   <div class="m-2 mb-16">
 
-    <p class="mt-3 sub-stuff"> <b> Our Goals </b></p>
+    <p class="mt-5 MAIN-STUFF"> <b> Our Goals </b></p>
     <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li><b>Education for all </b>irrespective of their background, language, age and location.</li>
       <li><b>Adaptability</b> of our educational content in accordance with the target audience.
@@ -102,7 +102,7 @@
     </ol>
     </p>
 
-    <p class="mt-3 sub-stuff"> <b> Our Impact </b></p>
+    <p class="mt-3 MAIN-STUFF"> <b> Our Impact </b></p>
     <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li>4 presentations that are <b>accessible</b> to any iGEM team upon contacting us.</li>
       <li><b>11 schools </b>across the states of Tamil Nadu, Maharashtra and Karnataka in India.</li>
@@ -148,7 +148,7 @@
     </p>
 
     <img
-      src="https://static.igem.wiki/teams/4641/wiki/education/mindmap-of-target-age-groups-high-school-middle-school-primary-school-and-collegiate-students-working-professionals-general-public.png"
+      src="https://static.igem.wiki/teams/4641/wiki/education/mind-map-education.png"
       class="img-fluid rounded mx-auto d-block" style="scale:0.9;">
     <p class="sub-stuff" style="text-align:center"> Codon Chart Activity conducted for High School students </p>
 
@@ -163,9 +163,22 @@
       and their potential applications in their daily life tend to ignite any student’s interest, which is why we chose
       to discuss synthetic biology with them. To help them explore how a new field can assist their daily life, given
       that suitable precautions are taken.<br><br>
+
+    Attached below is a PDF of the content curated by us for high school students:<br><br></p>
+
+    <div class="ratio ratio-16x9 mt-5">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/high-school-ppt.pdf"
+                allowfullscreen></iframe>
+      </div>
+
+      <p class="mt-5 sub-stuff">
       Our primary aim with high school students was to teach them the basics of synthetic biology. We taught them
       concepts like the central dogma of life, applications of synthetic biology and genetic engineering principles.<br>
-      We were able to successfully conduct these sessions with the help of a few animations for easy understanding—<br>
+      We were able to successfully conduct these sessions with the help of a few animations for easy understanding;<br>
+      </p>
+      <iframe title="MIT-MAHE: Central Dogma Animation for High School (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/180e1cc6-1334-472b-835a-1590e87452ba" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+      <p class="mt-5 sub-stuff">
       We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked
       various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— <b><q>I AM
         BOND.</q></b> <br><br>
@@ -452,6 +465,23 @@
       Our documentation can aid future educational initiatives and highlight broader environmental issues. Moreover, it
       encourages early engagement in environmental issues and lays a foundation for understanding its relevance to
       real-world challenges.</p>
+
+      <p class="mt-5 sub-stuff">Here is the content created by us on “Chemicals in Daily Use Products” for middle school students:</p>
+      <div class="ratio ratio-16x9 mt-5">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/middle-school-ppt.pdf"
+                allowfullscreen></iframe>
+      </div>
+
+      <p class="mt-5 sub-stuff">In order to keep the students engaged, these are a few animations we incorporated into our presentation: </p>
+
+      <iframe title="MIT-MAHE: Chemicals in our daily used products (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/0cdce307-2ac2-4a59-9b11-9ad989017dc1" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+      <iframe title="MIT-MAHE: Why antimicrobials are bad for you? (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/86d460b4-f00c-425d-adf0-4c6a309f9bff" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+      <iframe title="MIT-MAHE: Our solution for degrading TCC (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/61529e5a-85e2-4cc2-b4d3-c3eca19e6801" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+
+
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingNine">
@@ -602,13 +632,19 @@
         </div>
       </div>
     </div>
-    <p class='mt-5 substring'> <b> Content created by us for primary school students:</b> </p>
+    <p class='mt-5 MAIN-STUFF'> <b> Content created by us for primary school students:</b> </p>
+    <p class='mt-5 sub-stuff'>This is the presentation put together for the primary school students to convey the basics about genes and synthetic biology:</p>
+
+    <div class="ratio ratio-16x9 mt-5">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/primary-school-ppt.pdf"
+                allowfullscreen></iframe>
+            </div>
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwelve">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve"
             aria-expanded="true" aria-controls="collapseTwelve">
-            <b>"Tricky Ttriclocarban" comic strip</b>
+            <b>"Tricky Triclocarban" comic strip</b>
           </button>
         </h2>
         <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve">
@@ -645,7 +681,7 @@
               approachable way possible, we set out to create an activity booklet for children. It involves various
               activities that the students can engage in like coloring, maze puzzle, crossword, odd one out and word
               search. It is an interactive way to convey the concept of water pollution to them<br></p>
-            <div class="embed-responsive embed-responsive-16by9">
+            <div class="mt-5 ratio ratio-16x9">
               <iframe src="https://static.igem.wiki/teams/4641/wiki/education/activity-book-final.pdf"
                 allowfullscreen></iframe>
             </div>
@@ -667,7 +703,7 @@
             <p>We organized a series of Lab Safety sessions to equip the second years of MIT Manipal pursuing a B.Tech
               in Biotechnology with valuable laboratory safety knowledge and hands-on experience. In order to ensure
               that they have some basic background knowledge before going to the lab, we conducted a theory session on
-              general lab safety and Good Lab Practices (GLP) on the 5th of September. Following this, we conducted lab
+              general lab safety and Good Lab Practices (GLP) on the 5th of September[1]. Following this, we conducted lab
               safety sessions with them. These sessions took place on the 14th, 18th and 19th of September, 2023, with
               two half-hour sessions each day, accommodating five students per session to ensure the lab remained
               spacious and manageable.<br>
@@ -1366,6 +1402,8 @@
           <iframe src="https://static.igem.wiki/teams/4641/wiki/education/igem-guidetoeducation.pdf"
             allowfullscreen></iframe>
         </div>
+        <p class="mt-5 MAIN-STUFF"> References </p>
+        <p class="mt-5 sub-stuff"> 1. Indian Institute of Science. (n.d.). IISc_LabSafety_General_SAV_5.0 [Slide show; Presentation slides]. <br><a href="https://indianinstituteofscience-my.sharepoint.com/:p:/g/personal/nagabhushanc_iisc_ac_in/EVy2-opRMGpGrFO9gGxNwbsBhY6JNCl7iIH1ieM2l7pSTw?rtime=MrhAgsXJ20g. https://indianinstituteofscience-my.sharepoint.com/:p:/g/personal/nagabhushanc_iisc_ac_in/EVy2-opRMGpGrFO9gGxNwbsBhY6JNCl7iIH1ieM2l7pSTw?rtime=MrhAgsXJ2">https://indianinstituteofscience-my.sharepoint.com/:p:/g/personal/nagabhushanc_iisc_ac_in/EVy2-opRMGpGrFO9gGxNwbsBhY6JNCl7iIH1ieM2l7pSTw?rtime=MrhAgsXJ20g. https://indianinstituteofscience-my.sharepoint.com/:p:/g/personal/nagabhushanc_iisc_ac_in/EVy2-opRMGpGrFO9gGxNwbsBhY6JNCl7iIH1ieM2l7pSTw?rtime=MrhAgsXJ2</a> </p>
       </div>
       <div class='m-5' style="height: 50px">
       </div>
