fixed dropdown hopefully

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -82,7 +82,7 @@
             Hence, we looked for potential model organisms that had not been characterized for this purpose. An important parameter was the existence of pathways that could degrade the chloroaniline byproducts of TCC breakdown.
             Through extensive literature survey, we narrowed down our possible chassis options to three species capable of degrading the byproducts -<i>Acinetobacter baylyi </i>[3], <i> Pseudomonas putida </i>[4] [5]and <i> Pseudomonas fluorescens </i>[6]. <br>
             All three of these organisms had the natural capability to degrade the toxic by-products. The other major criteria we considered included:
-            <ul>
+            <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>Survivability of the bacteria in the pH range of the wastewater and sludge(6.5-8)</li>
               <li>Survivability of the bacteria in the temperature range of the sludge tank of the WWTP(20-37° C)</li>
               <li>Survivability at different TCC concentration ranges present in the sludge(13,000-21,000 ng/ml of TCC or 13-21 ppm of TCC)</li></ul><br><br>
@@ -95,7 +95,7 @@
           <p class="sub-stuff">
             <b>Growth Curves</b> To perform these experiments, we inoculated the bacteria in media that simulated the conditions of the sludge tank.The growth was measured by checking the arbitrary units of optical density at 600nm. To convert to absolute units, a calibration curve was plotted for wet weight of the cell vs OD.
           </p>
-          <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+          <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
             <li>
               <b>pH</b>
               The growth of the bacterial species at pH range of 6 to 8 was growth in LB media.
@@ -130,7 +130,7 @@
                   <p class="sub-stuff">
                     <b><i>Pseudomonas putida</i></b>
                     </p>
-                    <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                    <ol  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                       <li>
                         Growth curve of <i>Pseudomonas putida</i> in the presence of acetonitrile
                         <!--(insert image of p putida acetonitrile)-->
@@ -165,7 +165,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading4">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at different pH values
                       <!--(insert image of p putida ph)-->
@@ -200,7 +200,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading5">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at 24° C and 37° C
                       <!--(insert image of p putida Temp)-->
@@ -237,7 +237,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading6">
                 <div class="accordion-body">
-                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6">
+                  <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
                       Growth curve of <i>Pseudomonas putida</i> at different concentrations of TCC (sludge concentration)
                       <!--((insert image of p putida tcc sludge)-->
@@ -274,7 +274,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading7">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7">
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;"
                     <li>It has a lag phase of roughly 4 hours, after which its growth plateaus become steady. </li>
                     <li>We found that it showed optimal growth at 30ºC and 7.5pH</li>
                     <li>Its growth is stunted under the presence of TCC. </li>
@@ -300,7 +300,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading8">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8">
+                  <ul s style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>shows good growth at 30ºC, 7.5 pH.</li>
                     <li>Growth is stunted under the presence of TCC. </li>
                   </ul>
@@ -323,7 +323,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading9">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9">
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>It has a lag phase of 8-9 hours using primary inoculum</li>
                     <li>The lag phase for the secondary inoculation was about 2-3 hours. We tested its growth by altering the temperature, pH, and TCC concentration. </li>
                     <li>We found that 30ºC, 7.5 pH were the ideal conditions for growth and surprisingly, the presence of such high concentrations of TCC did not impede its exponential growth. Hence, <i>A. baylyi</i> can proliferate and grow uninhibited in the presence of TCC.</li>
