--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -1,3 +1,12 @@
+{% extends "my-layout.html" %}
+  
+{% block sidebar_content %}
+{% endblock %}
+
+{% block heading %}Experiments{% endblock %}
+
+{% block page_content %}
+
 <div class="content">
     <div class="m-2 mb-16">
         <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</p>
@@ -368,3 +377,31 @@
 
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% endblock %}
