hope its fixed now

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -1,5 +1,5 @@
 {% extends "my-layout.html" %}
-  
+
 {% block sidebar_content %}
 {% endblock %}
 
@@ -34,7 +34,7 @@
                   <u>Catalytic Triad</u>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading1">
+              <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1">
                 <div class="accordion-body">
                   <p class="sub-stuff">
                     Through literature survey, we found the catalytic triad of the amidase family to be Ser-Ser-Lys. To identify exactly which triad (Ser-Ser-Lys) of the amidase family was involved, we used multiple alignments.
@@ -55,7 +55,7 @@
                   <b>Alphafold</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading2">
+              <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2">
                 <div class="accordion-body">
                   <!--Fig 1-->
                   <p class="sub-stuff" style="text-align:center;">
@@ -134,7 +134,7 @@
                   <b>Effect of Acetonitrile</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading3">
+              <div id="collapse3" class="accordion-collapse collapse show" aria-labelledby="heading3">
                 <div class="accordion-body">
                   <p class="sub-stuff">
                     <b><i>Pseudomonas putida</i></b>
@@ -172,7 +172,7 @@
                   <b>Effect of pH</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading4">
+              <div id="collapse4" class="accordion-collapse collapse show" aria-labelledby="heading4">
                 <div class="accordion-body">
                   <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
@@ -207,7 +207,7 @@
                   <b>Effect of Temperature</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading5">
+              <div id="collapse5" class="accordion-collapse collapse show" aria-labelledby="heading5">
                 <div class="accordion-body">
                   <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
@@ -244,7 +244,7 @@
                   <b>Effect of TCC in Sludge Level Concentrations</b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading6">
+              <div id="collapse6" class="accordion-collapse collapse show" aria-labelledby="heading6">
                 <div class="accordion-body">
                   <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>
@@ -281,9 +281,9 @@
                   <b><i>Pseudomonas putida:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading7">
+              <div id="collapse7" class="accordion-collapse collapse show" aria-labelledby="heading7">
                 <div class="accordion-body">
-                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;"
+                  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>It has a lag phase of roughly 4 hours, after which its growth plateaus become steady. </li>
                     <li>We found that it showed optimal growth at 30ºC and 7.5pH</li>
                     <li>Its growth is stunted under the presence of TCC. </li>
@@ -307,10 +307,10 @@
                   <b><i>Pseudomonas fluorescens:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading8">
+              <div id="collapse8" class="accordion-collapse collapse show" aria-labelledby="heading8">
                 <div class="accordion-body">
                   <ul s style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
-                    <li>shows good growth at 30ºC, 7.5 pH.</li>
+                    <li>Shows good growth at 30ºC, 7.5 pH.</li>
                     <li>Growth is stunted under the presence of TCC. </li>
                   </ul>
                   <p class="sub-stuff">
@@ -330,7 +330,7 @@
                   <b><i>Acinetobacter baylyi:</i></b>
                 </button>
               </h4>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="heading9">
+              <div id="collapse9" class="accordion-collapse collapse show" aria-labelledby="heading9">
                 <div class="accordion-body">
                   <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                     <li>It has a lag phase of 8-9 hours using primary inoculum</li>
