--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -1988,6 +1988,11 @@
                               </div>
                             </div>
                          </div>
+                         <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/troubleshooting.pdf"
+                allowfullscreen></iframe>
+            </div>
+
 
 {% endblock %}
 
