--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -354,13 +354,34 @@
             </div>
           </div>
 
-          <p class="MAIN-STUFF" style="text-align:center;">MODULE 0</p>
+          <p class="MAIN-STUFF" style="text-align:center;">MODULE 2</p>
 
           <p class="MAIN-STUFF"><u>Design:</u></p>
 
+          <p class="sub-stuff">
+            To carry out the wet lab experiments, including cloning, we started out by designing our part and plasmid. <br>
+            Aim: To create a genetic circuit containing TccA amidase and insert it in <i> E.coli </i> to study its expression and characterise the enzyme.<br><br>
+            <u>Part Design</u>
+            <br><br>
+            The purpose of the amidase protein <a href="http://parts.igem.org/Part:BBa_K4641000">(Part number: BBa_K4641000)</a> in the chassis is to breakdown Triclocarban (3,4,4′-Trichlorocarbanilide) into 3,4-dichloroaniline and 4-chloroaniline. Our target protein is naturally constitutively expressed in <i>Ochrobactrum sp. TCC-2</i>
+          </p>
+          <img src="" style="img-fluid">
+          <img src="" style="img-fluid">
 
+          <p class="sub-stuff">
+            <u>Plasmid Design</u><br><br>
+            The CarbanEl system is based on a Gibson assembly cloning system. The gene fragment is designed and synthesized such that the overhangs to integrate the gene into pET22b+ are already added. For the characterization and study of the enzyme activity, we expressed the amidase gene in <i> E. coli BL21 </i>. However, our final intended chassis is <i>Acinetobacter baylyi</i>
+            <br>
+            The plasmid design is as below:
+          </p>
+          <img src="" style="img-fluid">
 
+          <p class="sub-stuff">
+            <u>Genetic circuit design:</u><br><br>
+            Gene regulation refers to how a particular gene expression can be controlled. It includes a variety of mechanisms that can be used to increase or decrease the expression or production of specific gene products.
+          </p>
 
+          <p class="sub-"></p>
 
 
 
